--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.profiles.include=oauth
+spring.session.store-type=jdbc
